# clinvoice_schema

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  foo.ts  package-lock.json  package.json  tsconfig.json
ci/: build.ts  index.mts  index.ts  scope.ts  test.mts  test.ts
ci/util/: pipeline.mts
src/: contact.rs  datetime_ext.rs  department.rs  employee.rs  expense.rs  id.rs  invoice.rs  invoice_date.rs  job.rs  lib.rs  location.rs  organization.rs  restorable_serde.rs  restore_error.rs  timesheet.rs
src/contact/: contact_kind.rs  display.rs  restorable_serde.rs
src/contact/contact_kind/: display.rs
src/datetime_ext/: error.rs
src/department/: restorable_serde.rs
src/employee/: display.rs
src/expense/: display.rs  exchange.rs  exchangeable.rs
src/invoice/: display.rs  exchange.rs  exchangeable.rs
src/invoice_date/: display.rs
src/job/: default.rs  display.rs  exchange.rs  exchangeable.rs  hash.rs  partial_ord.rs
src/location/: display.rs
src/organization/: display.rs
src/timesheet/: default.rs  display.rs  exchange.rs  exchangeable.rs
