# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-schema"
version = "0.10.2"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Data structures for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-schema"

[dependencies]
chrono = {features = ["serde"], version = "0.4"}
futures = "0.3"
humantime-serde = "1"
lazy_static = "1"
money2 = "0.7"
serde = {optional = true, version = "1"}
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
serde = ["money2/serde", "serde/derive"]
