# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-schema"
version = "0.16.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Data structures for Winvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-schema"

[dependencies]
chrono = '0.4'
futures = "0.3"
humantime-serde = "1"
money2 = "1"
serde = {optional = true, version = "1"}
thiserror = "1"
uuid = {features = ["v4"], version = "1"}

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
serde = ["chrono/serde", "money2/serde", "serde/derive", "uuid/serde"]
